# Binary-Flavor-DJ

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  lgtm.yml  sonar-project.properties
.circleci/: config.yml
CMake/: CompileOptions.cmake
Extensions/BfdjGUI/: CMakeLists.txt  main.cpp
Extensions/BfdjGUI/Includes/ModuleWindows/: DeckModuleWindow.hpp  HubWindow.hpp  MixerModuleWindow.hpp
Extensions/BfdjGUI/Includes/WorkspaceWindows/: WorkspaceWindow.hpp  WorkspaceWindowState.hpp
Extensions/BfdjGUI/Sources/: main.cpp
Extensions/BfdjGUI/Sources/ModuleWindows/: DeckModuleWindow.cpp  HubWindow.cpp  MixerModuleWindow.cpp
Extensions/BfdjGUI/Sources/WorkspaceWindows/: WorkspaceWindow.cpp  WorkspaceWindowState.cpp
Includes/Bfdj/ModuleWindows/: DeckModuleWindow.h  DeckModuleWindow.hpp  HubWindow.h  HubWindow.hpp
Includes/Bfdj/Modules/: DeckModule.h  DeckModule.hpp  Hub.h  Hub.hpp  MixerChannelModule.h  MixerChannelModule.hpp  MixerModule.h  MixerModule.hpp  Module.h  Module.hpp  PortAudioEngine.hpp
Includes/Bfdj/Track/: Analyzer.h  Analyzer.hpp  MetaData.hpp
Includes/Bfdj/Workspaces/: Workspace.hpp  Workspaces.hpp
Includes/Deck/: Deck.h
Includes/Hub/: Hub.h
Includes/Mixer/: Mixer.h
Includes/ModuleWindows/: DeckModuleWindow.h  MixerModuleWindow.h  ModuleWindow.h  WindowManager.h
Includes/Modules/: DeckModule.h  Hub.h  MixerChannelModule.h  MixerModule.h  Module.h
Includes/Sandbox/: Windows.h
Includes/Track/: Analyzer.h  MetaData.h
Includes/Windows/: MixerWindow.h  Window.h
Libraries/glfw/include/GLFW/: glfw3.h
Scripts/: CompileOptions.cmake  Dockerfile  travis_codecov.yml
Sources/: CMakeLists.txt  main.cpp
Sources/Bfdj/: CMakeLists.txt
Sources/Bfdj/Engine/: PortAudioEngine.cpp
Sources/Bfdj/ModuleWindows/: DeckModuleWindow.cpp  HubWindow.cpp
Sources/Bfdj/Modules/: DeckModule.cpp  Hub.cpp  MixerChannelModule.cpp  MixerModule.cpp
Sources/Bfdj/Track/: Analyzer.cpp  MetaData.cpp
Sources/Bfdj/Workspaces/: Workspace.cpp
Sources/Hub/: Hub.cpp
Sources/Mixer/: Mixer.cpp
Sources/ModuleWindows/: DeckModuleWindow.cpp  HubWindow.cpp
Sources/Modules/: DeckModule.cpp  Hub.cpp  Mixer.cpp  MixerChannelModule.cpp  MixerModule.cpp  WindowManager.cpp
Sources/Track/: Analyzer.cpp  MetaData.cpp
Sources/Windows/: MixerModuleWindow.cpp  MixerWindow.cpp
Tests/: CMakeLists.txt
Tests/ModuleTests/: DeckTests.cpp
Tests/UnitTests/: CMakeLists.txt  UnitTests.cpp
Tests/UnitTests/ModuleTests/: DeckTests.cpp  HubTests.cpp
Tests/UnitTests/WorkspaceTests/: WorkspaceTests.cpp
